# mystore

./: .env  .travis.yml  Cargo.toml  README.md
migrations/2019-05-04-174926_create_products/: down.sql  up.sql
migrations/2019-05-19-165021_create_users/: up.sql
migrations/2019-06-25-102903_add_description_to_products/: down.sql  up.sql
migrations/2019-06-25-112356_add_tsvector_column_to_products/: down.sql  up.sql
migrations/2019-07-01-114531_add_rank_to_products/: down.sql  up.sql
migrations/2019-07-01-192138_add_rank_index/: down.sql  up.sql
migrations/2019-07-06-151805_add_user_to_products/: down.sql  up.sql
migrations/2019-07-07-134611_add_prices/: down.sql  up.sql
migrations/2019-07-28-191653_add_sales/: down.sql  up.sql
migrations/2019-08-06-173342_add_bill_number_to_sales/: down.sql  up.sql
migrations/2019-09-25-114234_add_state_to_sales/: down.sql  up.sql
migrations/2020-06-11-134752_add_unique_index_to_users/: down.sql  up.sql
src/: db_connection.rs  errors.rs  graphql.rs  lib.rs  main.rs  schema.rs
src/graphql/: mod.rs  mutation.rs  query.rs  schema.rs
src/handlers/: authentication.rs  function_handler.rs  mod.rs  prices.rs  products.rs  register.rs
src/models/: mod.rs  price.rs  product.rs  sale.rs  sale_product.rs  sale_state.rs  user.rs
src/utils/: jwt.rs  mod.rs
tests/: product_test.rs  sale_test.rs
tests/common/: db_connection.rs  mod.rs
