[package]
name = "mystore"
version = "2.0.0"
authors = ["werner <werner_a_e@yahoo.es>"]
edition = "2018"

[lib]
name = "mystore_lib"
path = "src/lib.rs"

[dependencies]
actix = "0.8"
actix-web = "1.0.0-rc"
diesel = { version = "1.0.0", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.14.0"
dotenv_codegen="0.14.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
jsonwebtoken = "6"
bcrypt = "0.4.0"
chrono = { version = "0.4.6", features = ["serde"] }
csrf-token = { git = "ssh://git@github.com/3dom-co-jp/csrf-token.git", branch="v0.2.x" }
hex = "0.3.2"
env_logger = "0.6.1"
log = "0.4.6"
actix-http = "0.2.1"

[dev-dependencies]
bytes = "0.4"
actix-http-test = "0.2.0"
regex = "1"